# NeonInstall

./: .editorconfig  .gitignore  README.md  main.py  neon_zfs_installer.py  pyproject.toml  sudo.sh
neoninstall/: __init__.py  disk_operations.py  kde_operations.py  main.py  os_operations.py  system_operations.py  user_operations.py  zfs_operations.py
